Fix wrapping of settings buttons when scrollbar shown

--- a/css/app.css
+++ b/css/app.css
@@ -619,14 +619,8 @@ thumbnail-slider img {
     padding-left: 5px;
 }
 
-.save-settings {
-    min-width: 125px;
-}
-.history {
-    min-width: 190px;
-}
 .save-settings .btn-sm, .history .btn-sm {
-    padding: 5px 9px;
+    padding: 5px 8px;
 }
 
 .checkbox-settings {
